gitops/openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-service
  labels:
    app.kubernetes.io/name: demo-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: demo-service
